[package]
name = "noulith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
lazy_static = "1.4.0"
num = { version = "0.4.0", features = ["rand"] }
rand = "0.8.5"
regex = "1"
rustyline = { version = "10.0.0", optional = true }
rustyline-derive = { version = "0.7.0", optional = true }
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking"], optional = true }
aes = { version = "0.8.1", optional = true }

[features]
cli = ["rustyline", "rustyline-derive"]
request = ["reqwest"]
crypto = ["aes"]

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.74"
getrandom = { version = "0.2", features = ["js"] } # ???

[lib]
crate-type = ["cdylib", "rlib"]
