[package]
name = "noulith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
lazy_static = "1.4.0"
num = { version = "0.4.0", features = ["rand"] }
rand = "0.8.5"
regex = "1"
rustyline = { version = "10.0.0", optional = true }
rustyline-derive = { version = "0.7.0", optional = true }
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
aes = { version = "0.8.1", optional = true }
# minimizing dependencies since i already needed aes for stuff even though
# in a vacuum i'd prefer xchacha20-poly1305
aes-gcm = { version = "0.10.1", optional = true }
md-5 = { version = "0.10.5", optional = true } # insecure compatibility xd
sha2 = { version = "0.10.6", optional = true } # for people with standards
blake3 = { version = "1.3.1", optional = true } # livin' on the edge
app_dirs2 = { version = "2.5.4", optional = true }
serde_json = "1.0"
flate2 = "1.0"

[features]
cli = ["rustyline", "rustyline-derive", "app_dirs2"]
request = ["reqwest"]
crypto = ["aes", "aes-gcm", "md-5", "sha2", "blake3"]

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2.74"
getrandom = { version = "0.2", features = ["js"] } # ???

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = 1
