[package]
name = "noulith"
version = "1.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
lazy_static = "1.4"
num = { version = "0.4", features = ["rand"] }
rand = "0.8"
regex = "1"
rustyline = { version = "10.0", optional = true }
rustyline-derive = { version = "0.7", optional = true }
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
aes = { version = "0.8", optional = true }
# minimizing dependencies since i already needed aes for stuff even though
# in a vacuum i'd prefer xchacha20-poly1305
aes-gcm = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true } # insecure compatibility xd
sha2 = { version = "0.10", optional = true } # for people with standards
blake3 = { version = "1.3", optional = true } # livin' on the edge
app_dirs2 = { version = "2.5", optional = true }
rayon = { version = "1.8", optional = true }
serde_json = "1.0"
flate2 = "1.0"

[features]
cli = ["rustyline", "rustyline-derive", "app_dirs2"]
request = ["reqwest"]
crypto = ["aes", "aes-gcm", "md-5", "sha2", "blake3"]
parallel = ["rayon"]

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] } # ???

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = 1
